# file-storage-service

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  database.py  docker-compose.yml  files.py  fileversions.py  jwt_auth.py  main.py  pyproject.toml  requirements.txt
